# cfn-changeset-explorer

./: .gitignore  .pylintrc  LICENSE.md  README.md  cfn_changeset_explorer.sh  demo.sh  pyproject.toml
docs/: EXAMPLES.md
src/cfn_changeset_explorer/: main.py
src/cfn_changeset_explorer/helpers/: formatters.py  get_change_set_details.py  get_short_action.py  logger.py  parse_args.py
tests/: TODO.md
tests/fixtures/aws-cli/describe-change-set/: fixtures-filename-rules.md
tests/fixtures/aws-cli/describe-change-set/complex-nesting/: stack.complex-iam-policies.changeset.complex-iam-policies-cs.json  stack.complex-iam-roles.changeset.complex-iam-roles-cs.json  stack.complex-iam.changeset.complex-iam-cs.json  stack.complex-nacl.changeset.complex-nacl-cs.json  stack.complex-root.changeset.complex-root-cs.json  stack.complex-security-groups.changeset.complex-sg-cs.json  stack.complex-sg-app1.changeset.complex-sg-app1-cs.json  stack.complex-sg-app2.changeset.complex-sg-app2-cs.json  stack.complex-sg-app3.changeset.complex-sg-app3-cs.json  stack.complex-sg-rules.changeset.complex-sg-rules-cs.json  stack.complex-ssm.changeset.complex-ssm-cs.json
tests/fixtures/aws-cli/describe-change-set/no-nesting/: stack.no-nesting-stack.changeset.no-nesting-change-set.json
tests/fixtures/aws-cli/describe-change-set/two-levels-nesting/: stack.two-levels-root-stack.changeset.two-levels-root-change-set.json  (+2 more)
tests/fixtures/cfn_templates/complex_nested_stack/: stack.yml
tests/fixtures/cfn_templates/simple_nested_stack/: stack.yml
tests/fixtures/cfn_templates/simple_stack/: stack.yml
(+14 files in other folders)
